generate resources with version v1.5.0